--- a/apps/site/styles/globals.css
+++ b/apps/site/styles/globals.css
@@ -18,6 +18,10 @@ a {
   padding-right: 5vw;
 }
 
+.underNavbar {
+  padding-top: 4vh;
+}
+
 .arrows path {
   stroke: #f85f73;
   fill: transparent;
