--- a/apps/editor/styles/globals.css
+++ b/apps/editor/styles/globals.css
@@ -14,8 +14,13 @@ body,
   flex-direction: row;
 }
 
+.gutter {
+  border-left: 1px solid rgba(0, 0, 0, 0.12);
+}
+
 .gutter:hover {
   cursor: col-resize;
+  border-left: 2px solid rgba(0, 0, 0, 0.12);
 }
 
 .NavbarIcon {
