--- a/apps/web/styles/globals.css
+++ b/apps/web/styles/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.bg-blur-filter {
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
+}
