--- a/apps/client/styles/globals.css
+++ b/apps/client/styles/globals.css
@@ -4,7 +4,7 @@
 
 html {
   font-family: "Lato", sans-serif;
-  @apply bg-neutral-100;
+  @apply bg-background text-onBackground;
 }
 
 .max-w {
@@ -12,7 +12,7 @@ html {
 }
 
 .gradient-text {
-  @apply font-bold bg-clip-text text-transparent bg-gradient-to-r from-purple-600 to-secondary;
+  @apply bg-clip-text text-transparent bg-gradient-to-r from-primary to-tertiary;
 }
 
 .crosshair {
