switch to built in tailwind colors

--- a/apps/client/src/styles/globals.css
+++ b/apps/client/src/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html {
-  @apply bg-background text-onBackground selection:bg-primaryContainer antialiased;
+  @apply selection:bg-sky-100 antialiased;
 }
 
 .max-w-content {
