--- a/apps/client/src/styles/globals.css
+++ b/apps/client/src/styles/globals.css
@@ -19,14 +19,9 @@ html {
   width: 16px;
 }
 
-/* Scrollbar Track */
-::-webkit-scrollbar-track {
-  background-color: #fff;
-}
-
 /* Scrollbar Handle */
 ::-webkit-scrollbar-thumb {
-  background-color: #bbb;
+  background-color: rgba(0, 0, 0, 0.5);
   border-radius: 16px;
   border: 4px solid transparent;
   background-clip: content-box;
@@ -34,32 +29,7 @@ html {
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #999;
-}
-
-/* Crosshair */
-.crosshair {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  z-index: 1;
-  mix-blend-mode: difference;
-}
-
-.crosshair::before {
-  content: "";
-  display: block;
-  height: 11px;
-  border-left: 1px solid #fff;
-  margin-bottom: -6px;
-}
-
-.crosshair::after {
-  content: "";
-  display: block;
-  width: 11px;
-  border-top: 1px solid #fff;
-  margin-left: -5px;
+  background-color: rgba(0, 0, 0, 0.75);
 }
 
 /* React-dnd */
