--- a/apps/client/styles/globals.css
+++ b/apps/client/styles/globals.css
@@ -56,7 +56,7 @@ html {
 
 /* Crosshair */
 .crosshair {
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(calc(-50% + 1px), calc(-100% + 1px));
