fix web styling

--- a/web/app/style.css
+++ b/web/app/style.css
@@ -1,12 +1,8 @@
-html {
-  height: 100%;
-  overflow: hidden;
-}
-
-body {
+html, body {
   background-color: #111;
   color: #fff;
   font-family: 'Roboto', sans-serif;
   height: 100%;
   margin: 0;
+  overflow: hidden;
 }
