--- a/crates/unavi-app/public/style.css
+++ b/crates/unavi-app/public/style.css
@@ -3,7 +3,6 @@ body {
   background-color: #111;
   color: #fff;
   font-family: "Roboto", sans-serif;
-  height: 100%;
   margin: 0;
   overflow: hidden;
 }
@@ -11,8 +10,8 @@ body {
 canvas {
   user-select: none;
   touch-action: none;
-  width: 100%;
-  height: 100%;
+  width: 100vw !important;
+  height: 100vh !important;
 }
 
 canvas:focus {
